--- a/contact/contact.html
+++ b/contact/contact.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo" onclick="myFunction()">Logo</a>
+        <a href="#" class="logo" onclick="myFunction()"><i class='bx bxs-game'></i></a>
         <h1>El mejor titulo del mundo</h1>
         <div class="socialmedia">
             <ul>
@@ -68,7 +68,7 @@
             
     
             <div class="toggle">
-                <ion-icon name="menu-outline"></ion-icon>
+                <i class='bx bxs-game'></i>
                 <ion-icon name="close-outline"></ion-icon>
             </div>
         </dev>
