--- a/contact/contact.html
+++ b/contact/contact.html
@@ -41,7 +41,7 @@
                 <li><a href="../index.html" class="active">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="../login/login.html">Login</a></li>
-                <li><a href="../contact/contact.html">Contacts</a></li>
+                <li><a href="../contact/contact.html">Contact us</a></li>
             </ul>
         </div>
     </div>
@@ -91,10 +91,10 @@
                 <textarea name="message" id="" cols="30" rows="10" required placeholder="Send message"></textarea>
                 
             </div>
-            <div class="remember-forgot">
+            <!-- <div class="remember-forgot">
                 <label><input type="checkbox"> Remember me</label>
                 <a href="#">Forgot password?</a>
-            </div>
+            </div> -->
             <button type="submit" class="btn">Send message</button>
             <div class="register-link">
                 <p>Don't have an account? <a href="#">Register</a></p>
