--- a/login/login.html
+++ b/login/login.html
@@ -41,7 +41,7 @@
                 <li><a href="../index.html" class="active">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Login</a></li>
-                <li><a href="../contact/contact.html">Contacts</a></li>
+                <li><a href="../contact/contact.html">Contact us</a></li>
             </ul>
         </div>
     </div>
