--- a/login/login.html
+++ b/login/login.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="icon" href="../img/icons8-pacman-lleno-16.png">
     <link rel="stylesheet" href="../styles/combination.css">
     <link rel="stylesheet" href="../styles/socialmediabutton.css">
     <!-- <link rel="stylesheet" href="../styles/cuerpo.css"> -->
